[package]
name = "tree-sitter-beanie"
description = "Beanie parser powered by tree-sitter"
version = "0.1.1"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[features]
detailed_parsing = []

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
thiserror = "1.0.39"
tree-sitter = "0.20.9"

[build-dependencies]
cc = "1.0.79"
